--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=2
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -10,32 +10,32 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-273
+dock_hsplit_3=-276
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Main/Single Mode/Scripts/main.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://MVP/GameImages/", "res://Main/", "res://Main/Versus Mode/", "res://Main/Title Screen/", "res://Main/Single Mode/", "res://Main/Single Mode/Scripts/", "res://Main/Single Mode/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Main/Single Mode/Scenes/enemyship_2.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://MVP/GameImages/", "res://Main/", "res://Main/Versus Mode/", "res://Main/Title Screen/", "res://Main/Single Mode/", "res://Main/Single Mode/Scripts/", "res://Main/Single Mode/Scenes/", "res://Main/Assets/keyframes/", "res://Main/Assets/Asteroids/Sylized2/Large/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Main/Versus Mode/Player2.tscn", "res://Main/Title Screen/TitleScreen.tscn", "res://Main/Single Mode/Scenes/GameOver.tscn", "res://Main/Single Mode/Scenes/main.tscn", "res://Main/Versus Mode/versus.tscn", "res://Main/Title Screen/ModeSelection.tscn")
-current_scene="res://Main/Versus Mode/versus.tscn"
-center_split_offset=-287
+open_scenes=PackedStringArray("res://Main/Versus Mode/Player2.tscn", "res://Main/Single Mode/Scenes/main.tscn", "res://Main/Versus Mode/versus.tscn", "res://Main/Single Mode/Scenes/Player.tscn", "res://Main/Single Mode/Scenes/asteroid.tscn", "res://Main/Single Mode/Scenes/asteroids_2.tscn", "res://Main/Single Mode/Scenes/enemyship.tscn", "res://Main/Single Mode/Scenes/enemyship_2.tscn")
+current_scene="res://Main/Single Mode/Scenes/main.tscn"
+center_split_offset=-344
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Main/globalScript.gd", "res://Main/Single Mode/Scripts/main.gd", "res://Main/Title Screen/mode_selection.gd", "res://Main/Versus Mode/player2.gd", "res://Main/Single Mode/Scripts/player.gd", "res://README.md", "res://Main/Title Screen/title_screen.gd", "res://Main/Versus Mode/versus.gd"]
-selected_script="res://Main/Versus Mode/versus.gd"
+open_scripts=["res://Main/Single Mode/Scenes/asteroid.gd", "res://Main/Single Mode/Scenes/asteroids_2.gd", "res://Main/Single Mode/Scenes/enemyship.gd", "res://Main/Single Mode/Scenes/enemyship_2.gd", "res://Main/globalScript.gd", "res://Main/Single Mode/Scripts/main.gd", "res://Main/Title Screen/mode_selection.gd", "res://Main/Versus Mode/player2.gd", "res://Main/Single Mode/Scripts/player.gd", "res://README.md", "res://Main/Title Screen/title_screen.gd", "res://Main/Versus Mode/versus.gd"]
+selected_script="res://Main/Single Mode/Scripts/main.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
